WexGit/Wex_DX/force-app/main/default/objects/ProjectxOpp__c/fields/Opportunity_1st_Contract_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_1st_Contract_Year_Revenue__c</fullName>
    <label>Opportunity 1st Contract Year Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>