WexGit/Wex_DX/force-app/main/default/objects/ProjectxOpp__c/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Updated automatically, whenever this ProjectxOpp record is edited &amp; saved</inlineHelpText>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>