WexGit/Wex_DX/force-app/main/default/objects/ProjectxOpp__c/fields/Opportunity_Imp_Revenue_Com_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Imp_Revenue_Com_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Opportunity&apos;s Implementation Revenue Commencement Date - populated / updated every time this record is edited &amp; saved</inlineHelpText>
    <label>Opportunity Revenue Comencement</label>
    <type>Date</type>
</CustomField>