WexGit/Wex_DX/force-app/main/default/objects/ProjectxOpp__c/fields/Opportunity_Net_FSR__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Net_FSR__c</fullName>
    <inlineHelpText>This field is updated automatically, whenever you edit and save this record</inlineHelpText>
    <label>Opportunity Net FSR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>