WexGit/Wex_DX/force-app/main/default/objects/ProjectxOpp__c/fields/Opportunity_Revenue_In_Year__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Revenue_In_Year__c</fullName>
    <label>Opportunity Revenue In Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>