WexGit/Wex_DX/force-app/main/default/objects/ProjectxOpp__c/fields/Original_Forecast_Imp_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Forecast_Imp_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date which was forecast by Opportunity Owner for Implementation Completion, at the point when the Opportunity was sold</inlineHelpText>
    <label>Original Forecast Imp Completion Date</label>
    <type>Date</type>
</CustomField>